# rstsr-book

./: .gitignore  Cargo.toml  book.toml  docusaurus.config.js  package-lock.json  package.json  readme.md  readthedocs.yaml  script-readthedocs.py  sidebars-dev.js  sidebars.js
.github/workflows/: cargo-test.yml  ghpages.yml  mdbook.yml
dev/dev_notes/: index.mdx
docs/: for-numpy.mdx  numpy-cheatsheet.mdx  order-issue.mdx  warning.mdx  why-rstsr.mdx
docs/for_numpy/: 00-simple_cheatsheet.mdx  index.mdx
docs/fundamentals/: 00-installation.mdx  001-warning.mdx  01-tensor_creation.mdx  02-structure_and_ownership.mdx  03-tensor_rust_conversion.mdx  04-indexing.mdx  05-arithmetics_and_broadcasting.mdx  06-common_functions.mdx  index.mdx
docs/user-doc/: 00-welcome.mdx  01-tensor_creation.mdx  02-structure_and_ownership.mdx  03-indexing.mdx  04-arithmetics_and_broadcasting.mdx  05-common_functions.mdx  index.mdx
i18n/zh-hans/: code.json
i18n/zh-hans/docusaurus-plugin-content-docs/: current.json  listings
i18n/zh-hans/docusaurus-plugin-content-docs/current/: for-numpy.mdx  numpy-cheatsheet.mdx  order-issue.mdx  warning.mdx  why-rstsr.mdx
i18n/zh-hans/docusaurus-theme-classic/: footer.json  navbar.json
listings/features-default/: Cargo.toml
listings/features-default/tests/: arithmetics_and_broadcasting.rs  array_creation.rs  common_functions.rs  indexing.rs  installation.rs  numpy_cheatsheet.rs  order_issue.rs  structure_and_ownership.rs  tensor_creation.rs  tensor_rust_conversion.rs  welcome.rs  why_rstsr.rs
listings/fundamentals/listing-01-vec2d_to_tsr_recommended/: Cargo.toml
listings/fundamentals/listing-01-vec2d_to_tsr_recommended/src/: main.rs
listings/fundamentals/listing-01-vec_to_tsr/: Cargo.toml
listings/fundamentals/listing-01-vec_to_tsr/src/: main.rs
listings/fundamentals/listing-01-vec_to_tsr_otherdevice/: Cargo.toml
src/: SUMMARY.md  welcome.md
src/assets/: rstsr-basic-structure.pptx
src/components/HomepageFeatures/: index.js
src/css/: custom.css
src/fundamentals/: 01-array_creation.md  01-tensor_creation.md  02-structure_and_ownership.md  03-indexing.md  04-arithmetics_and_broadcasting.md  05-common_functions.md
src/pages/: index.js
src/remark-code-spinnets/: arguments.ts  index.ts
theme/: ferris.js  pagetoc.css
theme/css/: general.css  variables.css
(+14 files in other folders)
