[package]
name = "features-default"
version.workspace = true
edition.workspace = true

[dependencies]
rstsr = { workspace = true }
rstsr-core = { workspace = true }
rstsr-openblas = { workspace = true }
rstsr-linalg-traits = { workspace = true }
rayon = { workspace = true }
num = { version = "0.4" }
rand = { version = "0.8" }
lapack = { version = "0.20" }
faer-ext = { version = "0.6" }
libm = { version = "0.2" }
